<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <TextView android:id="@+id/title_new_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/append_edit1"
    />
	 <EditText
        android:id="@+id/editText1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/append_hint1" >
        <requestFocus />
    </EditText>
	<TextView android:id="@+id/title_new_devices1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/append_edit2"
    />
    <EditText
        android:id="@+id/editText2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/append_hint2">
        </EditText>
   	<TextView android:id="@+id/title_new_devices2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/append_edit3"
    />     
	<EditText
        android:id="@+id/editText3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/append_hint3"
        />
	<TextView android:id="@+id/title_new_devices3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/append_edit4"
    />   
    <EditText
        android:id="@+id/editText4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/append_hint4"
        />
    <TextView android:id="@+id/title_new_devices4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/append_edit5"
    />   
    <EditText
        android:id="@+id/editText5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/append_hint5"
        />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button1"
            android:layout_width="120dip"
            android:layout_height="wrap_content"
            android:text="@string/confirm" />
		
        <Button
            android:id="@+id/button2"
            android:layout_width="120dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:text="@string/cancel" />
    </LinearLayout>
</LinearLayout>
