<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:descendantFocusability="blocksDescendants"
    >
    <TextView android:id="@+id/Text0"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="当前重量显示"
        android:visibility="gone"       
    />
    <ScrollView
		android:id="@+id/ScrollView01"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:scrollbars="vertical"
		android:layout_weight="1"
		android:visibility="gone"       
		>
	<TextView android:id="@+id/in"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

    />
    </ScrollView>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:layout_margin="0dip"
		android:background = "@drawable/title_bar2"
        android:layout_gravity="center_vertical"
        		android:visibility="gone"      
        >

   	 	<TextView
   	 	    android:id="@+id/title_new_devices1"
   	 	    android:layout_width="200dp"
   	 	    android:layout_height="wrap_content"
   	 	    android:text="@string/app_name"
   	 	    android:textColor="#FFFFFF"
   	 	    android:layout_gravity="center_vertical"
   	 	    android:textSize="15sp" />

   	 	<Button
   	 	    android:id="@+id/Button_setting"
   	 	    android:layout_width="match_parent"
   	 	    android:layout_height="wrap_content"
   	 	    android:layout_marginRight="5dip"
   	 	    android:background="#00000000"
   	 	    android:gravity="right"
   	 	    android:text="@string/setting"
   	 	    android:textColor="#FFFFFF"
   	 	    android:layout_gravity="center_vertical"
   	 	    android:visibility="gone"    
   	 	    android:textSize="15sp" 
   	 	    android:onClick="onSettingButtonClicked">

		</Button>
    </LinearLayout>
 <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:layout_margin="0dip"
        android:layout_gravity="center_vertical"
        android:background="#F5F5DC" 
        >
   	 	<TextView android:id="@+id/title_new_devices"
	        android:layout_width="40dp"
	        android:layout_height="wrap_content"
	        android:text="@string/xuhao"
	                    android:gravity="center"
	        android:textColor="#000000"
    	/>
   	 	<TextView android:id="@+id/title_new_devices3"
	        android:layout_height="wrap_content"
	        android:text="@string/rongqi_name"
	         android:layout_width="120dp"
	         android:gravity="left"
	            	 	    android:textColor="#000000"
    	/>
   	 	<TextView android:id="@+id/title_new_devices2"
	        android:layout_height="wrap_content"
	        android:text="@string/sample_name"
	        android:layout_width="120dp"
	        android:gravity="left"
	           	 	    android:textColor="#000000"
    	/>
   	 	
   	 	<TextView android:id="@+id/title_new_devices4"
	        android:layout_height="wrap_content"
	        android:text="@string/weight"
	        android:layout_width="80dp"
	        android:gravity="left"
	           	 	    android:textColor="#000000"
    	/>
   	 	<Button 
			android:id="@+id/Button_setting1"
			android:layout_width="40dp" 
			android:layout_height="wrap_content"
			android:layout_marginRight="0dip"
			android:gravity="center" 
			android:background="#F5F5DC"
			android:text="@string/setting"
			        android:visibility="gone"   
			android:onClick="onSettingButtonClicked">
		</Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="0dip"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:tag="Read block" 
        android:layout_weight="1">

	    <ListView
	        android:id="@+id/list"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:cacheColorHint="#FFF"
	        android:focusable="false" >
	    </ListView>
</LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_margin="0dip"
        android:visibility="gone" 
        >
		<EditText  
			android:id="@+id/Edit0" 
			android:layout_width="0dip" 
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:layout_marginLeft="0dip"
			android:layout_gravity="bottom">
		</EditText>
		<Button 
			android:id="@+id/Button02" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:layout_marginRight="0dip"
			android:onClick="onSendButtonClicked">
		</Button>
    </LinearLayout>
    <LinearLayout   
        android:layout_width="fill_parent"
        android:layout_height="44dp"   
        android:background="#F5F5DC" >
       	<Button 
			android:text="@string/link" 
			android:id="@+id/Button03" 
			android:layout_width="fill_parent" 
			android:layout_height="44dp"
			android:layout_weight="1"
			android:gravity="center" 
			android:textColor="#000000"
			android:background="#00000000"
			android:layout_marginLeft="0dip"
			android:visibility="gone"    
			android:onClick="onConnectButtonClicked">
		</Button>
		<Button 
			android:text="@string/freshen" 
			android:id="@+id/Button04" 
			android:gravity="center" 
			android:layout_width="fill_parent" 
			android:layout_height="44dp"
			android:layout_weight="1"
			android:textColor="#000000"
			android:background="#00000000"
			android:onClick="onSaveButtonClicked">
		</Button>
		<Button 
			android:text="@string/append" 
			android:id="@+id/btn_append" 
			android:gravity="center" 
			android:layout_width="fill_parent" 
			android:layout_height="44dp"
			android:layout_weight="1"
			android:textColor="#000000"
			android:background="#00000000"
			android:onClick="onApendButtonClicked">
		</Button>
		<Button 
			android:text="@string/insert" 
			android:id="@+id/btn_insert" 
			android:gravity="center" 
			android:layout_width="fill_parent" 
			android:layout_height="44dp"
			android:layout_weight="1"
			android:textColor="#000000"
			android:background="#00000000"
			android:onClick="onInsertButtonClicked">
		</Button>
		<Button 
			android:text="@string/voice" 
			android:id="@+id/btn_voice" 
			android:gravity="center" 
			android:layout_width="fill_parent" 
			android:layout_height="44dp"
			android:layout_weight="1"
			android:textColor="#000000"
			android:background="#00000000"
			android:onClick="onVoiceButtonClicked">
		</Button>
		<Button 
			android:text="@string/save" 
			android:id="@+id/Button05" 
			android:gravity="center" 
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:textColor="#000000"
			android:background="#00000000"
			android:visibility="gone"  
			android:onClick="onClearButtonClicked">
		</Button>
		<Button 
			android:text="@string/quit" 
			android:id="@+id/Button06" 
			android:gravity="center" 
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:layout_marginRight="0dip"
			android:textColor="#000000"
			android:background="#00000000"
			android:onClick="onQuitButtonClicked">
		</Button>

    </LinearLayout>
</LinearLayout>