<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

<!-- 	//只需要送出 usedid ,batchdes ;另外batchname是自动生成的，返回逻辑 true or flase -->
    <TextView android:id="@+id/editbatchname1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/batch_editbatchname"
        />
    <EditText
        android:id="@+id/editbatchname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10">
    </EditText>
    <TextView android:id="@+id/editbatchdes1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/batch_editbatchdes"
        />
    <EditText
        android:id="@+id/editbatchdes"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10">
    </EditText>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonok"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dip"
            android:text="@string/confirm" />

        <Button
            android:id="@+id/buttoncancel"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>