<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  android:layout_width="fill_parent" 
  android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"> 
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:id="@+id/layout_myview">
 <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="0dip"
        android:layout_gravity="center_vertical"
        android:background="#F5F5DC" 
        >
   	 	<TextView android:id="@+id/title_new_devices1"
	        android:layout_width="40dp"
	        android:layout_height="wrap_content"
	        android:text="@string/xuhao"
	        android:gravity="center"
	        android:textColor="#000000"
    	/>
   	 	<TextView android:id="@+id/title_new_devices3"
	        android:layout_height="wrap_content"
	        android:text="@string/batch_editbatch"
	         android:layout_width="200dp"
	         android:gravity="left"
	         android:textColor="#000000"
    	/>
   	 	<TextView android:id="@+id/title_new_devices2"
	        android:layout_height="wrap_content"
	        android:text="@string/batch_editbatchdes"
	        android:layout_width="90dp"
	        android:gravity="left"
	        android:textColor="#000000"
	        android:visibility="gone" 
    	/>
   	 	
   	 	<TextView android:id="@+id/title_new_devices4"
	        android:layout_height="wrap_content"
	        android:text="@string/batch_editselect"
	        android:layout_width="80dp"
	        android:gravity="left"
	        android:textColor="#000000"
    	/>

    </LinearLayout>   
    <LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="300dp"
    android:id="@+id/layout_listview"
    >
 	<ListView
	        android:id="@+id/batch_list"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:cacheColorHint="#FFF"
	        android:focusable="false" >
	 </ListView>
	 </LinearLayout>
	 <Button
	        android:id="@+id/btn_close"
	        android:layout_height="wrap_content"
	        android:layout_width="60dp"
	        android:layout_gravity="center"
	        android:text="关闭" />  

</LinearLayout>
</ScrollView>